--- a/App/manifest.json
+++ b/App/manifest.json
@@ -4,16 +4,20 @@
   "description": "Music links to every platform",
   "version": "0.0.1",
   "icons": {
-    "64": "icons/icon.png"
+    "32": "icons/songwhip-32x32.png"
   },
+
+  "permissions": [
+    "tabs"
+  ],
+
   "page_action": {
+    "show_matches": ["https://open.spotify.com/*"],
     "default_icon": {
-      "64": "icons/icon.png"
-    },
-    "default_popup": "pageAction/index.html",
-    "default_title": "Songwhip"
+      "32": "icons/songwhip-32x32.png"
+    }
   },
-  "options_ui": {
-    "page": "options/index.html"
+  "background": {
+    "scripts": ["background.js"]
   }
 }
